compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_variable_pipe.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  let add_one = fn(wibble: Int) { wibble + 1 }\n  let wobble = 1\n  wobble |> add_one\n}\n"
snapshot_kind: text
---
pub fn main() {
  let add_one = fn(wibble: Int) { wibble + 1 }
  let wobble = 1
  wobble |> add_one|
}


----- Completion content -----
