compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__no_label_completions_in_nested_expression.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, wobble: Float)\n}\n\npub fn main() {\n  Wibble([w])\n}\n"
snapshot_kind: text
---
pub type Wibble {
  Wibble(wibble: Int, wobble: Float)
}

pub fn main() {
  Wibble([w|])
}


----- Completion content -----
