compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__no_variable_completions_after_anonymous_function_scope.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  fn() {\n    let something = 10\n  }\n  s\n}\n"
snapshot_kind: text
---
pub fn main() {
  fn() {
    let something = 10
  }
  s|
}


----- Completion content -----
