compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__no_variable_completions_after_block_scope.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  {\n    let something = 10\n  }\n  s\n}\n"
snapshot_kind: text
---
pub fn main() {
  {
    let something = 10
  }
  s|
}


----- Completion content -----
