compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__no_variable_completions_after_case_clause_scope.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  case todo {\n    something -> Nil\n    something_else -> s\n  }\n  s\n}\n"
snapshot_kind: text
---
pub fn main() {
  case todo {
    something -> Nil
    something_else -> s|
  }
  s
}


----- Completion content -----
