compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__no_variable_completions_after_case_scope.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  case todo {\n    something -> Nil\n  }\n  s\n}\n"
snapshot_kind: text
---
pub fn main() {
  case todo {
    something -> Nil
  }
  s|
}


----- Completion content -----
