compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__no_variable_completions_before_case_clause.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  case todo {\n    something -> s\n    something_else -> Nil\n  }\n  s\n}\n"
snapshot_kind: text
---
pub fn main() {
  case todo {
    something -> s|
    something_else -> Nil
  }
  s
}


----- Completion content -----
